feat: add type-checek in dependabot

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Linting
         run: npm run lint
 
+      - name: Type checking
+        run: npm run type-check
+
       - name: Test
         run: npm test
 
