--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "type-check": "tsc --project tsconfig.json --noEmit",
     "lint": "npx eslint src --max-warnings=0",
     "prepare": "husky install"
   },
