--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "type-check": "tsc --project tsconfig.json --noEmit",
     "lint": "npx eslint src --max-warnings=0",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "test:watch": "yarn test --watch",
+    "test:coverage": "yarn test --coverage --detectOpenHandles",
+    "test:coverage:text": "yarn test --coverageReporters='text-summary'"
   },
   "husky": {
     "hooks": {
@@ -17,7 +21,8 @@
   },
   "lint-staged": {
     "src/**/*.+(js|jsx|ts|tsx|md|mdx|yml|yaml)": [
-      "npm run lint --fix"
+      "npm run lint --fix",
+      "npm run test --findRelatedTests --bail --passWithNoTests"
     ]
   },
   "dependencies": {
@@ -34,6 +39,10 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@swc/jest": "^0.2.29",
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.4",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "eslint": "^8.48.0",
@@ -42,6 +51,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3"
   }
