--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "npx eslint src --max-warnings=0",
     "prepare": "husky install",
     "test": "jest",
-    "test:watch": "yarn test --watch",
-    "test:coverage": "yarn test --coverage --detectOpenHandles",
-    "test:coverage:text": "yarn test --coverageReporters='text-summary'"
+    "test:watch": "npm run test --watch",
+    "test:coverage": "npm run test --coverage --detectOpenHandles",
+    "test:coverage:text": "npm run test --coverageReporters='text-summary'"
   },
   "husky": {
     "hooks": {
@@ -22,7 +22,7 @@
   "lint-staged": {
     "src/**/*.+(js|jsx|ts|tsx|md|mdx|yml|yaml)": [
       "npm run lint --fix",
-      "npm run test --findRelatedTests --bail --passWithNoTests"
+      "npm run test -- --findRelatedTests --bail --passWithNoTests"
     ]
   },
   "dependencies": {
